--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "2.8.5",
     "express": "4.18.1",
     "mysql2": "2.3.3",
     "sequelize": "6.24.0"
+  },
+  "devDependencies": {
+    "nodemon": "2.0.20"
   }
 }
