--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,13 +20,19 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@capacitor/app": "4.0.1",
+    "@capacitor/camera": "^4.1.2",
     "@capacitor/core": "4.3.0",
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/status-bar": "4.0.1",
+    "@ionic-native/image-picker": "^5.36.0",
     "@ionic/angular": "^6.1.9",
+    "@ionic/lab": "^3.2.15",
+    "capacitor": "^0.5.5",
+    "cordova-plugin-telerik-imagepicker": "^2.3.6",
     "ionicons": "^6.0.3",
     "rxjs": "~6.6.0",
+    "swiper": "^8.4.3",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
