--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@ionic-native/image-picker": "^5.36.0",
     "@ionic/angular": "^6.1.9",
     "@ionic/lab": "^3.2.15",
+    "@ionic/pwa-elements": "^3.1.1",
     "capacitor": "^0.5.5",
     "cordova-plugin-telerik-imagepicker": "^2.3.6",
     "ionicons": "^6.0.3",
